Mejora arranque
- Se evita la comprobación contra la URL de prueba tras la configuración del almacén de confianza de la aplicación cuando no se encontra configurado el almacén de confianza.